example-overlays/nginx-ingress-https/ingress.yaml
#############################################################################
# NOTICE                                                                    #
#                                                                           #
# This software (or technical data) was produced for the U.S. Government    #
# under contract, and is subject to the Rights in Data-General Clause       #
# 52.227-14, Alt. IV (DEC 2007).                                            #
#                                                                           #
# Copyright 2022 The MITRE Corporation. All Rights Reserved.                #
#############################################################################

#############################################################################
# Copyright 2022 The MITRE Corporation                                      #
#                                                                           #
# Licensed under the Apache License, Version 2.0 (the "License");           #
# you may not use this file except in compliance with the License.          #
# You may obtain a copy of the License at                                   #
#                                                                           #
#    http://www.apache.org/licenses/LICENSE-2.0                             #
#                                                                           #
# Unless required by applicable law or agreed to in writing, software       #
# distributed under the License is distributed on an "AS IS" BASIS,         #
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  #
# See the License for the specific language governing permissions and       #
# limitations under the License.                                            #
#############################################################################

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openmpf-ingress
  labels:
    stack: openmpf
spec:
  tls:
    - hosts:
        - wfm.mpf.local
        - amq.mpf.local
      secretName: tls-secret
  rules:
    - host: wfm.mpf.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: workflow-manager
                port:
                  number: 8080
    - host: amq.mpf.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: activemq
                port:
                  number: 8161
